--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^16.12.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-social-icons": "^4.1.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
