--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "gatsby": "^2.18.18",
+    "gatsby-plugin-google-analytics": "^2.3.13",
     "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-theme-codebushi": "1.0.0",
     "react": "^16.12.0",
