--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby": "^2.18.18",
     "gatsby-plugin-google-analytics": "^2.3.13",
     "gatsby-plugin-react-helmet": "^3.3.10",
+    "gatsby-plugin-robots-txt": "^1.5.1",
     "gatsby-plugin-sitemap": "^2.4.12",
     "gatsby-theme-codebushi": "1.0.0",
     "react": "^16.12.0",
